--- a/ToeicWeb/wwwroot/customer/css/chat.css
+++ b/ToeicWeb/wwwroot/customer/css/chat.css
@@ -22,7 +22,7 @@
 
 /* Khung chat */
 #chat-container {
-    width: 380px;
+    width: 400px;
     max-height: 800px;
     position: fixed;
     bottom: 100px;
@@ -75,7 +75,7 @@
     display: flex;
     flex-direction: column;
     overflow-y: auto;
-    height: 230px;
+    height: 350px;
     padding: 10px;
 }
 
@@ -88,9 +88,8 @@
 
     /* Avatar */
     .chat-message img.avatar {
-        width: 36px;
-        height: 36px;
-        border-radius: 50%;
+        width: 30px;
+        height: 30px;
         object-fit: cover;
     }
 
@@ -145,8 +144,6 @@
 /* Vùng chọn AI / Admin */
 #chat-options {
     display: flex;
-    flex-direction: column;
-    align-items: center;
     gap: 10px;
     margin-bottom: 10px;
 }
@@ -165,9 +162,10 @@
 
     .chat-option-btn.active,
     .chat-option-btn:hover {
-        background-color: #007bff;
+        background: linear-gradient(135deg, #4e54c8, #8f94fb); /* xanh tím dịu */
         color: white;
     }
+
 
 /* Gửi tin nhắn */
 #chat-footer {
